--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ h1.site-title {
     -webkit-font-smoothing: antialiased;
 }
 
+#page-content-head {
+    margin-top: 70px;
+}
+
 .dawgdrops-item.dawgdrops-item a {
     /*padding: 5px 8px 20px 14px;*/
     /*font-size: 16px !important;*/
