Use secure resources.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ h1.site-title {
     float: left;
     width: 30px;
     height: 30px;
-    background: url(http://admit.washington.edu/sites/all/themes/admituw_theme3/svg/uw-sprite.svg) no-repeat 0 0;
+    background: url(https://admit.washington.edu/sites/all/themes/admituw_theme3/svg/uw-sprite.svg) no-repeat 0 0;
 }
 
 #uw-container #quicklinks ul li {
