--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ h1.site-title {
     margin-top: 70px;
 }
 
+#form-submitted #page-content-body {
+    margin-top: 0;
+}
+
 .dawgdrops-item.dawgdrops-item a {
     /*padding: 5px 8px 20px 14px;*/
     /*font-size: 16px !important;*/
