Less padding on submitted form page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ h1.site-title {
 }
 
 #form-submitted #page-content-body {
-    margin-top: 0;
+    padding-top: 0;
 }
 
 .dawgdrops-item.dawgdrops-item a {
